--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,24 @@
   </head>
   <body>
     <a id="skip-to-content" href="#content">Skip to the content.</a>
+    <div class="wrapper-masthead">
+      <div class="container">
+        <header class="masthead clearfix">
+          <a href="{{ site.baseurl }}/" class="site-avatar"><img src="{{ site.avatar }}" /></a>
 
+          <div class="site-info">
+            <h1 class="site-name"><a href="{{ site.baseurl }}/">{{ site.name }}</a></h1>
+            <p class="site-description">{{ site.description }}</p>
+          </div>
+
+          <nav>
+            <a href="{{ site.baseurl }}/">Blog</a>
+            <a href="{{ site.baseurl }}/about">About</a>
+          </nav>
+        </header>
+      </div>
+    </div>
+<!--
     <header class="page-header" role="banner">
       <a href="{{ site.baseurl }}/" class="site-avatar"><img src="{{ site.avatar }}" /></a>
       <h1 class="project-name">{{ site.title | default: site.github.repository_name }}</h1>
@@ -22,8 +39,8 @@
       {% if site.show_downloads %}
         <a href="{{ site.github.zip_url }}" class="btn">Download .zip</a>
         <a href="{{ site.github.tar_url }}" class="btn">Download .tar.gz</a>
-      {% endif %} -->
-    </header>
+      {% endif %}
+    </header> -->
 
     <main id="content" class="main-content" role="main">
       {{ content }}
